@@ -1,6 +1,6 @@
 #!/usr/bin/perl
 
-# Test that the syntax of our POD documentation is valid
+# Test that all modules have a version number
 use strict;
 BEGIN {
 	$|  = 1;
@@ -8,8 +8,7 @@ BEGIN {
 }
 
 my @MODULES = (
-	'Pod::Simple 3.07',
-	'Test::Pod 1.26',
+	'Test::HasVersion 0.012',
 );
 
 # Don't run tests during end-user installs
@@ -27,6 +26,6 @@ foreach my $MODULE ( @MODULES ) {
 	}
 }
 
-all_pod_files_ok();
+all_pm_version_ok();
 
 1;
