@@ -1,5 +1,6 @@
 Revision history for Games-Maze-SVG
-
+???? ???????????
+    - Add author tests for RELEASE_TESTING
 0.80 2014-08-16T12:00:00-0500
     - Make module versions consistent across distribution
     - Update Changes file to match CPAN::Changes::Spec
